--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
 <app-navigation></app-navigation>
 
-<router-outlet></router-outlet>
+<div class="container mt-5 pt-5">
+    <router-outlet></router-outlet>
+</div>
