--- a/src/app/components/join-create/join-create.component.html
+++ b/src/app/components/join-create/join-create.component.html
@@ -22,8 +22,6 @@
     <div class="text-center mt-5">
         <p>Or</p>
     
-        <button type="button" class="btn btn-primary mt-4">Create</button>
-
+        <button type="button" class="btn btn-primary mt-4" routerLink="/create">Create</button>
     </div>
-
 </div>
