Add user in session

--- a/src/app/components/questions/questions.component.html
+++ b/src/app/components/questions/questions.component.html
@@ -6,8 +6,8 @@
         <div class="card-body">
             <form (submit)="addQuestion(question)">
                 <div class="mb-5">
-                    <label for="sessionName" class="form-label">Question</label>
-                    <input class="form-control" id="sessionName" required #question>
+                    <label for="question" class="form-label">Question</label>
+                    <input class="form-control" id="question" required #question>
                 </div>
 
                 <button type="submit" class="btn btn-primary">Add</button>
