Add about page and session id

--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,1 +1,2 @@
-<p>about works!</p>
+<h1 class="text-center mb-5">Bootcamp project</h1>
+<h4 class="text-center mb-5">Weimar Alexander Torres Herrera</h4>
