--- a/src/app/components/session/session.component.html
+++ b/src/app/components/session/session.component.html
@@ -1,5 +1,7 @@
 <h1 class="text-center mb-5">{{session.name}}</h1>
 
+<h4 class="text-center mb-5">Session Id: {{sessionId}}</h4>
+
 <div class="mb-5" *ngFor="let question of questions">
 
     <div class="card text-center mb-1">
